Build GWT tasks