@@ -8,6 +8,7 @@ import org.gradle.api.DefaultTask
 import org.gradle.api.Plugin
 import org.gradle.api.Project
 import org.gradle.api.file.FileTree
+import org.gradle.api.internal.file.collections.SimpleFileCollection
 import org.gradle.api.tasks.TaskAction
 import org.gradle.api.tasks.bundling.Zip
 
@@ -622,19 +623,191 @@ class CubaDropTomcat extends DefaultTask {
     }
 }
 
-class CubaWebToolkit extends DefaultTask {
+class ProjectAllWebToolkit extends DefaultTask {
 
+    def widgetSetsDir
     def widgetSetModules
     def widgetSetClass
-    def args
+    def compilerArgs
+
+    private def defaultCompilerArgs = [
+           '-style' : 'OBF',
+           '-localWorkers' : '2',
+           '-logLevel' : 'INFO'
+    ]
+
+    private def compilerJvmArgs = new HashSet([
+            '-Xmx512m', '-Xss8m', '-XX:MaxPermSize=256m', '-Djava.awt.headless=true'
+    ])
+
+    ProjectAllWebToolkit() {
+        setDescription('Builds GWT widgetset in project-all')
+    }
+
+    @TaskAction
+    def buildGwt() {
+        if (!widgetSetsDir)
+            throw new IllegalStateException('Please specify \'String widgetSetsDir\' for build GWT')
+
+        if (!widgetSetClass)
+            throw new IllegalStateException('Please specify \'String widgetSetClass\' for build GWT')
+
+        if (!widgetSetModules || widgetSetModules.isEmpty())
+            throw new IllegalStateException('Please specify not empty \'Collection widgetSetModules\' for build GWT')
+
+        File widgetSetsDirectory = new File(this.widgetSetsDir)
+        if (!widgetSetsDirectory.exists()) {
+            List compilerClassPath = collectClassPathEntries()
+            List gwtCompilerArgs = collectCompilerArgs(widgetSetsDirectory.absolutePath)
+            List gwtCompilerJvmArgs = collectCompilerJvmArgs()
+
+            project.javaexec {
+                main = 'com.google.gwt.dev.Compiler'
+                classpath = new SimpleFileCollection(compilerClassPath)
+                args = gwtCompilerArgs
+                jvmArgs = gwtCompilerJvmArgs
+            }
+
+            new File(widgetSetsDirectory, 'WEB-INF').deleteDir()
+        } else {
+            println "Widgetsets dir exists, skip build GWT"
+        }
+    }
+
+    def jvmArgs(String... jvmArgs) {
+        compilerJvmArgs.addAll(Arrays.asList(jvmArgs))
+    }
+
+    protected List collectCompilerJvmArgs() {
+        println('JVM Args:')
+        println(compilerJvmArgs)
+
+        return new LinkedList(compilerJvmArgs)
+    }
+
+    protected List collectCompilerArgs(warPath) {
+        List args = []
+
+        args.add('-war')
+        args.add(warPath)
+
+        for (def entry : defaultCompilerArgs.entrySet()) {
+            args.add(entry.getKey())
+            args.add(getCompilerArg(entry.getKey()))
+        }
+
+        args.add(widgetSetClass)
+
+        println('GWT Compiler args: ')
+        println(args)
+
+        return args
+    }
+
+    protected def getCompilerArg(argName) {
+        if (compilerArgs && compilerArgs.containsKey(argName))
+            return compilerArgs.get(argName)
+        else
+            return defaultCompilerArgs.get(argName)
+    }
+
+    protected List collectClassPathEntries() {
+        def gwtBuildingArtifacts = project.configurations.gwtBuilding.resolvedConfiguration.getResolvedArtifacts()
+
+        File validationSrcDir = gwtBuildingArtifacts.find { a -> a.name == 'validation-api' }.file
+        List compilerClassPath = [validationSrcDir]
+
+        def moduleClassesDirs = []
+        def moduleSrcDirs = []
+        for (def module: widgetSetModules) {
+            moduleSrcDirs.add(new File((File) module.projectDir, 'src'))
+            moduleClassesDirs.add(module.sourceSets.main.output.classesDir)
+        }
+
+        compilerClassPath.addAll(moduleSrcDirs)
+        compilerClassPath.addAll(moduleClassesDirs)
+
+        compilerClassPath.add(project.sourceSets.main.compileClasspath.getAsPath())
+        compilerClassPath.add(project.sourceSets.main.output.classesDir)
+        return compilerClassPath
+    }
+}
+
+class CubaWebToolkit extends ProjectAllWebToolkit {
+
+    def inheritedArtifacts
+
+    private def excludes = [ ]
 
     CubaWebToolkit() {
         setDescription('Builds GWT widgetset')
     }
 
-    @TaskAction
-    def buildGwt() {
+    def excludeJars(String... artifacts) {
+        excludes.addAll(artifacts)
+    }
 
+    private static class InheritedArtifact {
+        def name
+        def jarFile
+    }
+
+    boolean excludedArtifact(String name) {
+        for (def artifactName : excludes)
+            if (name.contains(artifactName))
+                return true
+        return false
+    }
+
+    @Override
+    protected List collectClassPathEntries() {
+        def gwtBuildingArtifacts = project.configurations.gwtBuilding.resolvedConfiguration.getResolvedArtifacts()
+        def providedArtefacts = project.configurations.provided.resolvedConfiguration.getResolvedArtifacts()
+
+        File validationSrcDir = gwtBuildingArtifacts.find { a -> a.name == 'validation-api' }.file
+        List compilerClassPath = [validationSrcDir]
+
+        def mainClasspath = project.sourceSets.main.compileClasspath.findAll { !excludedArtifact(it.name) }
+
+        if (inheritedArtifacts) {
+            def inheritedWidgetSets = []
+            def inheritedSources = []
+            for (def artifactName: inheritedArtifacts) {
+                def artifact = providedArtefacts.find { it.name == artifactName }
+                inheritedWidgetSets.add(new InheritedArtifact(name: artifactName, jarFile: artifact.file))
+                def artifactSource = gwtBuildingArtifacts.find { it.name == artifactName }
+                if (artifactSource)
+                    inheritedSources.add(new InheritedArtifact(name: artifactName, jarFile: artifactSource.file))
+            }
+
+            // unpack inhertited toolkit (widget sets)
+            for (InheritedArtifact toolkit: inheritedWidgetSets) {
+                File toolkitJar = providedArtefacts.find { it.name == toolkit.name }.file
+                File toolkitClassesDir = new File("${project.buildDir}/tmp/${toolkit.name}-classes")
+                project.copy {
+                    from project.zipTree(toolkitJar)
+                    into toolkitClassesDir
+                }
+                mainClasspath.add(0, toolkitClassesDir)
+            }
+
+            for (InheritedArtifact sourceArtifact: inheritedSources)
+                compilerClassPath.add(sourceArtifact.jarFile)
+        }
+
+        if (!(widgetSetModules instanceof Collection))
+            widgetSetModules = Collections.singletonList(widgetSetModules)
+
+        for (def widgetSetModule: widgetSetModules) {
+            compilerClassPath.add(new File(widgetSetModule.projectDir, 'src'))
+            compilerClassPath.add(widgetSetModule.sourceSets.main.output.classesDir)
+        }
+
+        compilerClassPath.add(project.sourceSets.main.output.classesDir)
+
+        compilerClassPath.addAll(mainClasspath)
+
+        return compilerClassPath
     }
 }
 
